Product show page alignment fix

--- a/app/assets/stylesheets/prod_show.css
+++ b/app/assets/stylesheets/prod_show.css
@@ -17,7 +17,7 @@
 }
 
 .show-page-other-div {
-    margin: 0 0 0 35vh;
+    margin: 0 0 0 13%;
 }
 
 .show-page-name {
